# baseline

./: .gitignore  .mcp.json  BETA_READINESS_REVIEW.md  CLAUDE.md  Cargo.toml  README.md  SPEC_V0_1_DELTA.md  llms.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
baseline-rt/: Cargo.toml
baseline-rt/src/: fiber.rs  helpers.rs  lib.rs  natives.rs  nvalue.rs  rc.rs  value.rs
baseline-site/: package-lock.json  package.json  svelte.config.js
baseline-site/prototypes/: design-10-dark.html  design-5-memory.html  design-7-tufte.html  design-8-bringhurst.html  design-8.html  design-9-dark-bringhurst.html  design-9-midcentury.html  index.html  style.css
baseline-site/scripts/: generate-llms-full.js
baseline-site/src/: app.css
baseline-site/static/: _headers  llms-full.txt
benchmarks/: README.md  bench.sh
benchmarks/axum_server/: Cargo.toml
blc/: Cargo.toml  test_debug.bl  test_list.bl  test_safety.bl  test_struct_match.bl
blc/examples/: async_bench_server.rs  simple_test.bl  test_effects_std.bl  test_refinements_indirect.bl
blc/fuzz/: Cargo.toml
blc/fuzz/fuzz_targets/: execute.rs  interpret.rs  parse.rs
blc/src/: builtins.rs  cgp.rs  diagnostic_render.rs  diagnostics.rs  docs.rs  format.rs  interpreter.rs  lib.rs  lsp.rs  main.rs  manifest.rs  parse.rs  prelude.rs  repl.rs  resolver.rs  test_runner.rs
blc/src/analysis/: effects.rs  infer.rs  mod.rs  refinements.rs  smt.rs  types.rs
blc/src/analysis/types/: builtins.rs  check_cycles.rs  check_lambda.rs  check_node.rs  check_pattern.rs  mod.rs  symbol_table.rs  type_compat.rs  type_def.rs  type_parse.rs
blc/src/mcp/: mod.rs  rosetta.rs  tools.rs
blc/src/openapi/: extract.rs  mod.rs  model.rs  schema.rs  serialize.rs
blc/src/stdlib/: http.rs  hyper_server.rs  hyper_server_tests.rs  json.rs  list.rs  map.rs  mod.rs  option.rs  request.rs  response.rs  result.rs  router.rs  set.rs  string.rs
blc/src/templates/: CLAUDE.md  ai-instructions.md  copilot-instructions.md
blc/src/vm/: async_executor.rs  chunk.rs  codegen.rs  compiler.rs  fiber.rs  hyper_server.rs  hyper_server_tests.rs  ir.rs  jit.rs  llvm_backend.rs  lower.rs  mod.rs  module_compiler.rs  natives.rs  nvalue.rs  optimize_ir.rs  radix.rs  sendable.rs  stdlib.rs  test_runner.rs  value.rs  vm.rs
blc/src/vm/exec/: dispatch_arith.rs  dispatch_call.rs  dispatch_cmp.rs  dispatch_data.rs  dispatch_effects.rs  frame.rs  hof.rs  http_helpers.rs  mod.rs  server.rs  tests.rs
blc/src/vm/jit/: analysis.rs  aot.rs  compile.rs  compile_opt.rs  compile_pattern.rs  helpers.rs  mod.rs  server.rs  tests.rs  tests_closure.rs  tests_codegen.rs  tests_pattern.rs  tests_rc.rs
blc/src/vm/lower/: call.rs  control.rs  data.rs  effects.rs  helpers.rs  literals.rs  mod.rs  operators.rs  test_lower.rs  tests.rs
blc/src/vm/natives/: async_rt.rs  console.rs  crypto.rs  datetime.rs  db.rs  db_backend.rs  db_helpers.rs  db_migrate.rs  db_mysql.rs  db_postgres.rs  env.rs  float.rs  fs.rs  fs_sandbox.rs  http_error.rs  int_conv.rs  json.rs  jwt.rs  list.rs  log.rs  map.rs  math.rs  middleware.rs  mod.rs  multipart.rs  option.rs  random.rs  regex.rs  request.rs  response.rs  result.rs  router.rs  schema.rs  session.rs  set.rs  string.rs  time.rs  validate.rs  weak.rs  ws.rs
blc/tests/: analysis_tests.rs  aot_tests.rs  audit_fixes_test.rs  bootstrap_tests.rs  concurrency_tests.rs  conformance_tests.rs  differential_tests.rs  e2e_tests.rs  mcp_tests.rs  property_tests.proptest-regressions  property_tests.rs
design/: CODEBASE_REVIEW.md  PLAN_V0_1_RUNTIME.md  ai-agent-strategy.md  baseline-language-specification-v2.md  baseline-language-specification.md  baseline-language-vision.md  benchmarks.md  cranelift-guide.md  expanding-the-functional-universe.md  functional-elegance.txt  ir-implementation-plan.md  language-design-research-001.md  language-design-research-002.md  llms-txt-strategy.md  minimal-code-example.md  mutable_lists_brainstorm.md  rfc-100-percent-jit.md  rfc-cow-optimizations.md  rfc-cyclic-data.md  rfc-guard-clauses.md  rocket-language-specification.md  technical-specification.md  v2-roadmap-ac.md  vm-optimization-phases-4-5-6.md  why-rocket.md
docs/: PHASE1_ASYNC_SERVER.md  agent-smoke-test-report.md  deprecation_plan.md  error-catalog.md  getting-started.md  refactor_plan.md  stdlib-reference.md  tour.md
examples/: README.md  api_server.bl  api_server_v2.bl  args_demo.bl  bench_server.bl  closure_hof.bl  effects_test.bl  error_handling.bl  fizzbuzz.bl  grammar_test.bl  graph_traversal.bl  hello.bl  http_test.bl  inline_test.bl  inline_test_fail.bl  jit_int_overflow.bl  jit_list_head.bl  jit_match_option.bl  jit_merge_mini.bl  jit_merge_tiny.bl  jit_treemap_medium.bl  jit_treemap_mini.bl  jit_treemap_overflow.bl  json_test.bl  least_squares.bl  list_ops.bl  list_test.bl  looping_effects.bl  match_constructor_args.bl  match_list_args.bl  math_test.bl  mcp_server.bl  middleware_test.bl  option_result.bl  option_test.bl  pattern_matching.bl  random_numbers.bl  refinement_test.bl  refinement_test.rocket  result_test.bl  (+15 more)
pybaseline/: Cargo.toml
pyrocket/: Cargo.toml
rocketc/: Cargo.toml
rocketc/src/: main.rs  parse.rs
rocketc/src/analysis/: effects.rs  mod.rs  refinements.rs
scripts/: bootstrap.sh  diagnostic-coverage.sh  release.sh  test.sh
selfhost/: compiler.bl  test_input.bl
site/: package-lock.json  package.json  wrangler.jsonc
stdlib/: List.bl  Option.bl  Result.bl
tree-sitter-baseline/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-baseline/bindings/rust/: build.rs  lib.rs
tree-sitter-baseline/queries/: highlights.scm  locals.scm
tree-sitter-baseline/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-baseline/test/corpus/: bdd_testing.txt  effects.txt  expressions.txt  functions.txt  literals.txt  types.txt
tree-sitter-rocket/: Cargo.toml  grammar.js  package-lock.json
tree-sitter-rocket/bindings/rust/: lib.rs
tree-sitter-rocket/src/: grammar.json  node-types.json
tree-sitter-rocket/test/corpus/: bdd_testing.txt  effects.txt  types.txt
(+421 files in other folders)
