[workspace]
resolver = "2"
members = ["blc", "baseline-rt", "tree-sitter-baseline"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/baseline-lang/baseline"

[workspace.dependencies]
tree-sitter = "0.25"
tree-sitter-language = "0.1"

# Security: force lru to patched version (transitive via mysql_async)
lru = "0.16.3"
