[package]
name = "baseline-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime library for Baseline AOT-compiled programs"

[features]
default = []
# Use non-atomic Rc instead of Arc for single-threaded execution.
# ~2x faster refcount ops but NValue becomes !Send + !Sync.
non-atomic-rc = []

[dependencies]
libc = "0.2"
rustc-hash = "2"

[lib]
crate-type = ["lib", "staticlib"]
