[package]
name = "blc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Baseline programming language compiler"

[lib]
name = "blc"
path = "src/lib.rs"

[[bin]]
name = "blc"
path = "src/main.rs"

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
llvm = ["dep:inkwell"]
async-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter.workspace = true
tree-sitter-baseline = { path = "../tree-sitter-baseline" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
tiny_http = "0.12"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Async HTTP server (behind feature flag)
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# JIT dependencies (behind feature flag)
cranelift-codegen = { version = "0.128", optional = true }
cranelift-frontend = { version = "0.128", optional = true }
cranelift-module = { version = "0.128", optional = true }
cranelift-jit = { version = "0.128", optional = true }
cranelift-native = { version = "0.128", optional = true }
target-lexicon = { version = "0.13", optional = true }

# LLVM dependencies (behind feature flag)
inkwell = { version = "0.8", features = ["llvm18-1"], optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
