[package]
name = "blc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Baseline programming language compiler"

[lib]
name = "blc"
path = "src/lib.rs"

[[bin]]
name = "blc"
path = "src/main.rs"

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
aot = ["jit", "dep:cranelift-object"]
async-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:tokio-util"]

[dependencies]
baseline-rt = { path = "../baseline-rt" }
clap = { version = "4", features = ["derive"] }
tree-sitter.workspace = true
tree-sitter-baseline = { path = "../tree-sitter-baseline" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = "3"
tiny_http = "0.12"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Async HTTP server (behind feature flag)
hyper = { version = "1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
tokio-util = { version = "0.7", optional = true }

# JIT dependencies (behind feature flag)
cranelift-codegen = { version = "0.128", optional = true }
cranelift-frontend = { version = "0.128", optional = true }
cranelift-module = { version = "0.128", optional = true }
cranelift-jit = { version = "0.128", optional = true }
cranelift-native = { version = "0.128", optional = true }
target-lexicon = { version = "0.13", optional = true }
cranelift-object = { version = "0.128", optional = true }

[[example]]
name = "async_bench_server"
required-features = ["async-server"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
