[package]
name = "blc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Baseline programming language compiler"

[lib]
name = "blc"
path = "src/lib.rs"

[[bin]]
name = "blc"
path = "src/main.rs"

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
aot = ["jit", "dep:cranelift-object"]
mcp = ["dep:rmcp", "dep:schemars", "dep:tempfile"]
async-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:tokio-util", "dep:flate2", "dep:tokio-stream", "dep:tokio-tungstenite", "dep:futures-util"]
tls = ["async-server", "dep:tokio-rustls", "dep:rustls-pemfile"]
postgres = ["dep:tokio-postgres"]
mysql = ["dep:mysql_async"]

[dependencies]
baseline-rt = { path = "../baseline-rt" }
clap = { version = "4", features = ["derive"] }
tree-sitter.workspace = true
tree-sitter-baseline = { path = "../tree-sitter-baseline" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
regex = "1"
rand = "0.8"
sha2 = "0.10"
ureq = "3"
tiny_http = "0.12"
rusqlite = { version = "0.34", features = ["bundled"] }
rustyline = "14"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# MCP server (behind feature flag)
rmcp = { version = "0.13", features = ["server", "transport-io"], optional = true }
schemars = { version = "1", optional = true }
tempfile = { version = "3", optional = true }

# Async HTTP server (behind feature flag)
hyper = { version = "1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
flate2 = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }

# TLS (behind feature flag, requires async-server)
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

# JIT dependencies (behind feature flag)
cranelift-codegen = { version = "0.128", optional = true }
cranelift-frontend = { version = "0.128", optional = true }
cranelift-module = { version = "0.128", optional = true }
cranelift-jit = { version = "0.128", optional = true }
cranelift-native = { version = "0.128", optional = true }
target-lexicon = { version = "0.13", optional = true }
cranelift-object = { version = "0.128", optional = true }

# Database connectors (behind feature flags)
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.36", optional = true }

[[example]]
name = "async_bench_server"
required-features = ["async-server"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
