[package]
name = "tree-sitter-rocket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter grammar for the Rocket programming language"
keywords = ["tree-sitter", "parser", "rocket", "language"]
categories = ["parsing", "development-tools"]
build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language.workspace = true

[build-dependencies]
cc = "1.2"
